# CP-DS

./: A_REMAINDER.cpp  B_ANSWER  B_ANSWER.cpp  C_BUCKET  C_BUCKET.cpp  hello  hello.cpp
CPxDSA/: a.out  (+11 more)
Competitive/Codechef_CP/: Adjacency_Love  Adjacency_Love.cpp  Airline_Restrictions.cpp  Apples_and_Oranges.cpp  Bucket_and_Water_Flow.cpp  Buy_2_Get_1_Free.cpp  CMakeLists.txt  CRED_Coins.cpp  Chef_And_Salary_Pay  Chef_And_Salary_Pay.cpp  Chef_and_Races.cpp  Chef_and_Stock_Prices_  Chef_and_Stock_Prices_.cpp  Credit_score.cpp  Cup_Finals.cpp  Economics_Class.cpp  Equal_After_And.cpp  Equal_Coins.cpp  Group_Assignment.cpp  Increase_IQ.cpp  List_of_Lists.cpp  Lucky_Number.cpp  Maximum_Pairwise_Modular_Sum  Maximum_Pairwise_Modular_Sum.cpp  Minimum_Number_of_Pizzas.cpp  Minimum_number_of_coins.cpp  Pass_or_Fail.cpp  Problem_Category.java  Problems_in_your_to-do_list.cpp  Professor_And_Directions  Professor_And_Directions.cpp  Sad_Splits.cpp  Test_Match_Series.cpp  The_One_Where_It_All_Began.cpp  The_Three_Topics.cpp  The_Two_Dishes.cpp  Travel_Pass.cpp  Utkarsh_and_Placement_tests  Utkarsh_and_Placement_tests.cpp  Which_Fuel_is_Cheaper.cpp  (+4 more)
Competitive/Codechef_CP/.cph/: .Adjacency_Love.cpp_79e0481d390775522b89b3f6d93dcc39.prob  .Airline_Restrictions.cpp_23e53a21711db497f6565c376f808aae.prob  .Apples_and_Oranges.cpp_a3b9b51da6a6b387b1235cb6fc89c296.prob  .Box_It_.cpp_8b1e89d9d4d9c1bf8bc4e806f7fcb47b.prob  .Bucket_and_Water_Flow.cpp_1a2878d772e01da1b825d21cf13e7ea5.prob  .Buy_2_Get_1_Free.cpp_b029a6471f17592dc394a0f974e209d0.prob  .CRED_Coins.cpp_096c2efa12644cad75a00f99d5545eb3.prob  .Chef_And_Salary_Pay.cpp_105b980aa5e0e423c02d463bd0b579fa.prob  .Chef_and_Races.cpp_0926ae3099f01607eed4b69b31f4183f.prob  .Chef_and_Stock_Prices_.cpp_d5ccae9f3e6ff624ca370a5b24156636.prob  .Class.cpp_0260277170162187d81045a7d1e7f27c.prob  .Classes_and_Objects.cpp_56d677eb17c591fb6022ae260810c150.prob  .Credit_score.cpp_e896aa9dd5d37ae2f8fd1837598c50a8.prob  (+32 more)
(+366 files in other folders)
