cmake_minimum_required(VERSION 3.24)
project(Codechef_CP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Codechef_CP
        practice_probs/ATM.cpp
        practice_probs/Enormous_Input_Test.cpp
        SeptemberLong/Bob_at_the_Bank.cpp
        SeptemberLong/Chef_and_Wire_Frames.cpp
        SeptemberLong/Speed_Limit_Test.cpp
        "Starters 47/Chef_On_Date.cpp"
        "Starters 47/Chess_Time.cpp"
        "Starters 47/Construct_N.cpp"
        "Starters 47/Minimum_Coins.cpp"
        Adjacency_Love.cpp
        Airline_Restrictions.cpp
        Apples_and_Oranges.cpp
        Bucket_and_Water_Flow.cpp
        Buy_2_Get_1_Free.cpp
        Chef_and_Races.cpp
        Chef_And_Salary_Pay.cpp
        Chef_and_Stock_Prices_.cpp
        CRED_Coins.cpp
        Credit_score.cpp
        Cup_Finals.cpp
        Economics_Class.cpp
        Equal_After_And.cpp
        Equal_Coins.cpp
        Find_the_Direction.cpp
        Good_Weather.cpp
        Group_Assignment.cpp
        How_many_unattempted_problems.cpp
        Increase_IQ.cpp
        int_to_string_using_stringstream.cpp
        List_of_Lists.cpp
        Lucky_Four.cpp
        Lucky_Number.cpp
        Make_it_Divisible.cpp
        Maximum_Pairwise_Modular_Sum.cpp
        Minimum_number_of_coins.cpp
        Minimum_Number_of_Pizzas.cpp
        Pass_or_Fail.cpp
        Problems_in_your_to-do_list.cpp
        Professor_And_Directions.cpp
        Sad_Splits.cpp
        Shuffling_Parities.cpp
        test.cpp
        Test_Match_Series.cpp
        testcodechef.cpp
        The_One_Where_It_All_Began.cpp
        The_Rating_Dilemma.cpp
        The_Three_Topics.cpp
        The_Two_Dishes.cpp
        Travel_Pass.cpp
        Utkarsh_and_Placement_tests.cpp
        Weird_Palindrome_Making.cpp
        Which_Fuel_is_Cheaper.cpp
        Which_Mixture.cpp
        XOR_Equal.cpp)
